--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,13 @@ sass:
 kramdown:
   auto_ids: false
 
-collections:
-  products:
-    output: true
-    sort_by: name
-  pages:
-    output: true
-    permalink: /:name
+products:
+- name: Apple
+  price: 2
+  description: Fresh, crisp, and juicy! These apples are hand-picked from our centuries-old family orchard.
+- name: Banana
+  price: 10
+  description: Packed with energy and electrolytes like potassium, bananas are the perfect on-the-go snack.
+- name: Cantaloupe
+  price: 5
+  description: One slice of this delcious melon provides you with your daily nutritional value of vitamin C!
